fixed issue with toggle not showing

--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,15 @@ z-index: 10;
 .toggle { 
     position: fixed;
     top: 0;
-    right: 0;
-    width: 0px;
+    left: 0px;
+    width: 60px;
     height: 60px;
-    background: red url(../images/menu.png);
+    background: green url(../images/menu.png);
     background-size: 30px;
-    background-position: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 20;
+    cursor: pointer;
 
 }
 
@@ -91,15 +94,14 @@ z-index: 10;
 /* Navigation  */
 
 .navigation {
-   display: none;
-   
+    display: none;
+  
 }
 
 
  /* Homepage */
 
 .home-img {
-    display: none;
     position: absolute;
     bottom: 0;
     right: 0;
